SONARPHP-1643 Error level log should be used only for non-recoverable error that stop the analyzer (#1391)